# nts

./: .codecov.yml  .gitattributes  .gitignore  .pubignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  _typos.toml  analysis_options.yaml  dart_test.yaml  flutter_rust_bridge.yaml  lychee.toml  pubspec.yaml  sonar-project.properties
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.github/: dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: advisory.yml  audit.yml  ci.yml  codeql.yml  fuzz.yml  scorecard.yml  sonarcloud.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/nllewellyn/nts/: NtsPlugin.kt  PlatformInit.kt
doc/: MONOTONIC_TIME.md
docs/: MONOTONIC_TIME.md
example/: .pubignore  CLI_GUIDE.md  GUI_GUIDE.md  README.md  example.dart  example.md  main.dart  pubspec.yaml
example/android/app/: build.gradle.kts  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/nts/example/: MainActivity.kt  RustlsBootstrap.kt
example/assets/: nts-sources.yml  reliable-servers.json
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: home_page.dart  mock_api.dart
example/lib/src/cli/: bridge_loader.dart  catalog_tool_args.dart
example/lib/src/data/: server_catalog.dart  server_entry.dart  server_loader.dart
example/lib/src/health/: health_report.dart  probe.dart  server_health.dart
example/lib/src/manifest/: manifest_builder.dart  region.dart
example/lib/src/state/: app_state.dart  favorites_store.dart  log_buffer.dart  log_entry.dart  nts_controller.dart  nts_format.dart
example/lib/src/theme/: nts_colors.dart
example/lib/src/widgets/: action_panel.dart  custom_roots_panel.dart  latest_result_panel.dart  log_view.dart  server_list_view.dart  trust_status_panel.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: app_state_test.dart  health_report_test.dart  log_buffer_test.dart  manifest_builder_test.dart  nts_format_test.dart  server_health_test.dart  server_loader_test.dart  widget_test.dart
example/tool/: generate_icon.py
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: nts.dart
lib/src/api/: clock.dart  errors.dart  models.dart  nts.dart
lib/src/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/ffi/api/: nts.dart  nts.freezed.dart  simple.dart
rust/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  tarpaulin.toml
rust/fuzz/: .gitignore  Cargo.toml
rust/fuzz/corpus/parse_authenticator_body/: canonical-body  oversized-announced-lengths  unaligned-nonce-len
rust/fuzz/corpus/parse_extensions/: ntpd-rs-undersized-encryption-ef  ntpd-rs-undersized-nonce
rust/fuzz/corpus/parse_message/: canonical-full-message
rust/fuzz/corpus/parse_server_response/: canonical-authenticated-response  ntsn-kod-unauthenticated
rust/fuzz/fuzz_targets/: parse_authenticator_body.rs  parse_extensions.rs  parse_message.rs  parse_server_response.rs  validate_response.rs
rust/src/: android_init.rs  frb_generated.rs  ios_init.rs  lib.rs
rust/src/api/: mod.rs  nts.rs  simple.rs
rust/src/api/nts/: tests.rs
rust/src/nts/: aead.rs  boottime.rs  cookies.rs  dns.rs  hybrid_verifier.rs  ke.rs  mod.rs  ntp.rs  records.rs  test_helpers.rs  trust_state.rs
rust/src/nts/ke/: tests.rs
rust/src/nts/ntp/: tests.rs
test/: api_smoke_test.dart  check_doc_snippets_test.dart  ffi_smoke_test.dart
test/live/: nts_live_test.dart
tool/: check_bindings.dart  check_doc_snippets.dart
tool/hooks/: pre-commit  pre-merge-commit  pre-push  test_hooks.sh
