[package]
name = "nts_rust"
version = "0.5.0"
edition = "2021"
publish = false
license = "MIT"
description = "Rust client for RFC 8915 Network Time Security, bridged to Dart via flutter_rust_bridge."
# Floor set by transitive deps (notably `security-framework 3.7.0` pulled
# in by `rustls-platform-verifier`, which requires edition2024) plus
# `usize::is_multiple_of` (stable in 1.87, used in `nts::ntp` and
# `nts::records` for the extension-field length validators). The active
# toolchain pin in `rust-toolchain.toml` is higher (currently 1.92.0);
# declaring the actual functional floor here keeps clippy's msrv-aware
# suggestions accurate without over-constraining downstream consumers.
# The matching `msrv` entry lives in `rust/clippy.toml`.
rust-version = "1.87"

# This crate is consumed by Flutter via the Native Assets API
# (`hook/build.dart`). The crate-type list below has three entries:
#
# - `cdylib`    — produced for iOS / Android / desktop dylib bundling.
# - `staticlib` — used on platforms where the native asset hook prefers a
#                 static archive (e.g. iOS device builds without dynamic
#                 framework wrapping).
# - `rlib`      — required so cargo-fuzz harnesses in `rust/fuzz/` (and
#                 any future Rust-side integration tests in a sibling
#                 crate) can link `nts_rust` as a Rust dependency. Adds
#                 a `libnts_rust.rlib` to `target/<profile>/deps/` but
#                 does not change the `cdylib` / `staticlib` outputs the
#                 Native Assets build hook reads, and is not published
#                 to consumers (only the cdylib/staticlib are bundled).
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# Compile-time logging-level strip is gated behind a default-on Cargo
# feature so the Native Assets build hook (`hook/build.dart`) can drop
# it via `--no-default-features` when the consuming app sets the
# `verbose_logs` user-define for local debugging. The default keeps
# production-correctness as the safe-by-default behaviour: any caller
# (CI, app store builds, downstream embedders) that does not opt into
# a non-default feature set still gets the stripped binary. This is
# load-bearing for desktop and future web targets where the mobile
# obfuscators (DexGuard / IXGuard) are not present and the binary
# strip is the primary protection against leaking protocol-level
# strings. Cargo features are additive across the dep graph, so a
# single `log-strip` activation propagates to `rustls`, FRB, and any
# future direct `log::*!` call sites without per-crate edits.
[features]
default = ["log-strip"]
log-strip = ["log/release_max_level_warn", "tracing/release_max_level_warn"]
# Re-exports the otherwise-`pub(crate)` `nts` protocol modules through a
# `__internal_fuzz` re-export module so harnesses in `rust/fuzz/` can
# target the parsers (`parse_extensions`, `parse_message`,
# `validate_response`) without widening the crate's public API. The
# `__internal-` prefix is the `ntpd-rs ntp-proto/Cargo.toml` convention
# (bd nts-b6m sub-item B): "exists for the workspace's own tooling;
# external consumers must not depend on it." The feature must only ever
# be enabled by fuzz / coverage crates that are themselves excluded from
# the published artefact, never by the Native Assets build hook
# (`hook/build.dart`) or the FRB codegen. The Cargo feature uses the
# canonical hyphenated form (`__internal-fuzz`); the corresponding Rust
# module name substitutes underscore (`__internal_fuzz`) because Rust
# identifiers cannot contain hyphens.
__internal-fuzz = []

[dependencies]
aes-gcm-siv = { version = "0.11", default-features = false, features = ["alloc", "aes"] }
aes-siv = { version = "0.7", default-features = false, features = ["alloc"] }
# Pinned to match the `flutter_rust_bridge` Dart dependency in pubspec.yaml.
# Bumps must be coordinated across both sides (`cargo update` + `flutter pub upgrade`).
flutter_rust_bridge = "=2.12.0"
getrandom = { version = "0.2", default-features = false, features = ["std"] }
# `release_max_level_warn` is forwarded from the crate's own `log-strip`
# feature (see `[features]` above) so the build hook can flip it via
# the `verbose_logs` user-define. The `nts::hybrid_verifier` warn-level
# fallback notice and any future error paths are preserved and reach
# the platform subscriber (FRB's `android_logger` on Android; the
# `tracing-oslog` layer wired up by `src/ios_init.rs` on iOS).
log = "0.4"
# RFC 8915 §3 mandates TLS 1.3 for NTS-KE — the `tls12` feature is
# deliberately omitted so the rustls build cannot negotiate a TLS 1.2
# session at all. The protocol-version filter in `ke::TLS_PROTOCOL_VERSIONS`
# is a redundant in-code guard: even if a future edit re-adds the feature,
# the explicit `builder_with_protocol_versions(&[&TLS13])` call in
# `build_tls_config` keeps the negotiated version pinned to TLS 1.3.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rustls-pki-types = "1"
rustls-platform-verifier = "0.5"
# `tracing` is the structured event surface used by the iOS observability
# path (`src/ios_init.rs`) and any future cross-platform instrumentation.
# Its `release_max_level_warn` is also routed through the `log-strip`
# feature so a single hook-side toggle gates both `log::*!` and
# `tracing::*!` call sites. On platforms that do not install a
# `tracing::Subscriber` (Android, macOS host, desktop) events are
# silently dropped, so this dep adds no host-side noise.
tracing = { version = "0.1", default-features = false, features = ["std"] }
webpki-roots = "0.26"
zeroize = { version = "1.8", default-features = false, features = ["alloc", "derive"] }

# Android-only: JNI handles for bootstrapping `rustls-platform-verifier`'s
# Java glue layer. The verifier delegates X.509 chain validation to the
# Android system's `X509TrustManager`, which requires the Rust side to call
# `rustls_platform_verifier::android::init_with_env(&mut JNIEnv, JObject)`
# from a JNI entry point exactly once before the first TLS handshake. The
# Kotlin caller for that entry point ships inside the `nts` Flutter plugin's
# Android library module (`android/src/main/kotlin/com/nllewellyn/nts/PlatformInit.kt`);
# see `src/android_init.rs` for the Rust counterpart.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

# iOS-only: subscriber stack that pipes `tracing` events and `log::*!`
# records into Apple's unified logging system (`os_log`). Initialized once
# from `api::simple::init_app` via `crate::ios_init::init_logging`. This
# replaces FRB's `setup_log_to_console` on iOS — that helper would
# otherwise install `oslog::OsLogger::new("frb_user")` as the global
# `log` logger, claiming the `log::set_logger` slot under a generic
# subsystem and blocking `tracing-log::LogTracer` from installing.
# Console.app filter: `process:Runner subsystem:com.nllewellyn.nts`.
[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
tracing-log = "0.2"

[lints.rust]
# `frb_expand` is set by flutter_rust_bridge_codegen during macro expansion.
# Declaring it here silences the spurious `unexpected_cfgs` warning on builds
# that don't run codegen.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Curated clippy lint set adapted from `pendulum-project/ntpd-rs`
# (`ntp-proto/src/lib.rs` v1.7.2). Each entry is a hardening signal that
# reviewer attention currently has to catch — large pass-by-value, missed
# exhaustiveness, redundant closures, dead `async`, etc. The Cargo table
# form is preferred over `#![warn(clippy::*)]` attributes in `lib.rs` so
# the source isn't polluted with a 100-entry block.
#
# `level = "warn"` everywhere; CI promotes warnings to errors via
# `cargo clippy -- -D warnings`. The matching `clippy.toml` declares
# the `msrv` floor so suggestions respect what we can actually adopt.
#
# ntpd-rs's `//FIXME: Enable` entries are intentionally omitted (their
# backlog, not ours). Drift between this set and upstream's is expected;
# the goal is the hardening surface, not byte-for-byte parity.
[lints.clippy]
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_ptr_alignment = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
elidable_lifetime_names = "warn"
empty_enum = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
ignore_without_reason = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
inline_always = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
maybe_infinite_iter = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
too_many_lines = "warn"
transmute_ptr_to_ptr = "warn"
# Renamed from `clippy::unchecked_duration_subtraction` upstream; the
# old name still resolves but emits `renamed_and_removed_lints`. Use
# the canonical name directly.
unchecked_time_subtraction = "warn"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnested_or_patterns = "warn"
unsafe_derive_deserialize = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
