# cargo-fuzz workspace for the `nts_rust` parser surface.
#
# Layout follows the standard `cargo fuzz init` shape:
# - `[[bin]]` per fuzz target, pointing at `fuzz_targets/<name>.rs`.
# - `corpus/<target>/` holds the regression seed files (committed).
# - `artifacts/<target>/` holds new crash reproducers (gitignored).
# - `target/` holds build output (gitignored).
#
# This is a separate Cargo workspace from `rust/` so the parent crate's
# `cargo test --lib` / `cargo clippy --lib --tests` invocations do not
# pull `libfuzzer-sys` into their dep graph. `libfuzzer-sys` itself
# builds on stable; the nightly toolchain requirement comes from
# `cargo fuzz {build,run}` enabling sanitizer coverage instrumentation
# (`-Zsanitizer`, etc.) that only nightly accepts. Keeping this crate
# out of the parent's workspace means the parent's pin to stable
# 1.92.0 does not need to track `cargo fuzz`'s nightly requirement.
#
# Usage (local): see `DEVELOPMENT.md` for the full walkthrough.
#   cargo install cargo-fuzz
#   rustup toolchain install nightly
#   cd rust/fuzz && cargo +nightly fuzz run parse_extensions
#
# CI: `.github/workflows/fuzz.yml` runs every target nightly in a
# per-target matrix. A new `[[bin]]` below must also be added to that
# workflow's `matrix.target` list — that workflow's `matrix-parity`
# job enforces the pairing mechanically by diffing `cargo fuzz list`
# against the matrix, so a missed mirror fails red instead of going
# silently un-fuzzed (bd nts-o54o / NTS-68).

[package]
name = "nts_rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
# Pinned to the same major version cargo-fuzz vendors as of writing
# (0.4.x). `libfuzzer-sys` itself builds on stable; only the sanitizer
# wrapping injected by `cargo fuzz {build,run}` requires nightly.
libfuzzer-sys = "0.4"

[dependencies.nts_rust]
path = ".."
# Enables the `__internal_fuzz` re-export module on the parent crate so
# this harness can drive the otherwise-`pub(crate)` parsers directly.
# Feature name uses the canonical hyphenated `__internal-fuzz` form;
# the Rust module name substitutes underscore (bd nts-b6m sub-item B).
features = ["__internal-fuzz"]

[[bin]]
name = "parse_extensions"
path = "fuzz_targets/parse_extensions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_message"
path = "fuzz_targets/parse_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "validate_response"
path = "fuzz_targets/validate_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_authenticator_body"
path = "fuzz_targets/parse_authenticator_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_server_response"
path = "fuzz_targets/parse_server_response.rs"
test = false
doc = false
bench = false

# Standalone `[workspace]` stanza: declares this manifest as the root
# of its own Cargo workspace so it is not silently absorbed into a
# parent workspace cargo discovers via `--manifest-path` walks. With
# this manifest already containing `[package]`, the workspace
# implicitly contains the package itself as its only member, so no
# explicit `members = [...]` line is needed (and adding one would
# duplicate the implicit single-member set). The parent
# `rust/Cargo.toml` does not list this crate as a member, so the
# parent's `cargo test --lib` / clippy invocations remain unaffected.
[workspace]
